# Rust-WebGPU-Renderer

./: .gitignore  Cargo.toml  README.md  TODO.md  test.md
assets/companion_cube/: companion_cube.mtl
assets/spaceship/: spaceship.mtl
glfw-3.4/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.4/docs/: Makefile  cmake_install.cmake
glfw-3.4/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  splitview  triangle-opengl  triangle-opengles  wave  windows
glfw-3.4/src/: Makefile  cmake_install.cmake
glfw-3.4/tests/: Makefile  allocator  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  reopen  tearing  threads  timeout  title  triangle-vulkan  window
src/: game_object.rs  main.rs
src/model/: game_objects.rs  mod.rs  world.rs
src/physics/: mod.rs  physics.rs
src/renderer/: mod.rs  renderer.rs
src/renderer/backend/: assets.rs  bind_group.rs  bind_group_layout.rs  definitions.rs  mesh_builder.rs  mod.rs  pipeline.rs  ssbo.rs  texture.rs  ubo.rs
src/renderer_backend/: bind_group.rs  bind_group_layout.rs  material.rs  mesh_builder.rs  mod.rs  pipeline.rs  pipeline_builder.rs  ubo.rs
src/shaders/: colored_model_shader.wgsl  instanced_colored.wgsl  instanced_textured.wgsl  textured_model_shader.wgsl
src/utility/: string.rs
