[package]
name = "criticalmass"
version = "0.1.0"
edition = "2024"

[dependencies]
# winit = "*" # all my homies hate winit
env_logger = "*"
pollster = "*"
# log = "*"
rapier3d = { version = "*", features = [ "simd-stable" ] }

# requires at least glfw 3.4 dev
# if building from source, run `sudo apt install libxcursor-dev libxi-de`
glfw = "*"
wgpu = "*"
glm = "*"

[dependencies.image]
version = "*"
features = ["png", "jpeg"]

# potentially use https://github.com/Ralith/openxrs
# potentially use mlua for game logic and scripting
