[package]
name = "project"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = { version = "0.60", features = ["static-link"] }

wgpu = "27.0.1"
pollster = "0.4.0"
glm = "0.3.0"

rapier3d = { version = "0.30.1", features = [ "simd-stable", "parallel" ] }
tokio = "1.48.0"
lz4_flex = "0.12.0"
bincode = "2.0.1"
serde = "1.0.228"
oddio = "0.7.4"
bytemuck = "1.24.0"

# num-bigint = "0.4.6"
# num-complex = "0.4.6"

[dependencies.image]
version = "*"
features = ["png", "jpeg"]

[profile.release]
strip = true
